# ada-compliance

./: .gitignore  Dockerfile  Procfile  README.md  docker-compose.yml  install.sh  pyproject.toml  requirements-dev.txt  requirements.txt
ada_bot/: __init__.py  cli.py  crawler.py  engine.py  reporter.py  webapp.py
ada_bot/auditors/: __init__.py  aria_auditor.py  axe_auditor.py  base.py  color_auditor.py  html_auditor.py  keyboard_auditor.py  vision_auditor.py
ada_bot/templates/: report.html  web_index.html  web_status.html
tests/: test_aria_auditor.py  test_color_auditor.py  test_crawler.py  test_error_handling.py  test_html_auditor.py  test_integration.py  test_keyboard_auditor.py  test_reporter.py  test_webapp.py
