[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ada-compliance-bot"
version = "1.0.0"
description = "A thorough multi-pass ADA/WCAG compliance auditing bot for websites"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["ada", "wcag", "accessibility", "compliance", "audit"]
dependencies = [
    "playwright>=1.43.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.2.0",
    "requests>=2.31.0",
    "click>=8.1.0",
    "colorama>=0.4.6",
    "jinja2>=3.1.0",
    "openai>=1.30.0",
    "Pillow>=10.3.0",
    "wcag-contrast-ratio>=0.9",
    "cssutils>=2.11.0",
    "tinycss2>=1.3.0",
    "urllib3>=2.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "responses>=0.25.0",
]
web = [
    "flask>=3.0.0",
    "gunicorn>=22.0.0",
]

[project.scripts]
ada-bot     = "ada_bot.cli:main"
ada-bot-web = "ada_bot.webapp:run_dev_server"

[tool.setuptools.packages.find]
where = ["."]
include = ["ada_bot*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: marks tests as integration tests that make real network requests (deselect with '-m not integration')",
]
